# asdf

./: 5068.txt  CLAUDE.md  GATEWAY_GUIDE.md  SENTINEL_INTEGRATION_COMPLETE.md  docker-compose.yml  test.html  스택  스택.txt
back/auth/: Dockerfile  go.mod  go.sum
back/auth/src/: main.go
back/gateway/: Dockerfile  envoy.yaml
back/sentinel/: API.md  Cargo.toml  Dockerfile  SENTINEL_SPECIFICATION.md
back/sentinel/src/: api_handlers.rs  cache.rs  database.rs  errors.rs  main.rs  models.rs  permission_checker.rs  permission_hierarchy.rs  tuple_store.rs  zookie.rs
back/services/team/: Dockerfile  README.md  build.gradle.kts
back/services/user/: Dockerfile  requirements.txt
db/: README.md
db/init/: 01_create_database.sql
docs/doc.rust-lang.org/: crates1.88.0.js
docs/doc.rust-lang.org/std/: all.html  index.html  keyword.SelfTy.html  keyword.as.html  keyword.async.html  keyword.await.html  keyword.break.html  keyword.const.html  keyword.continue.html  keyword.crate.html  keyword.dyn.html  keyword.else.html  keyword.enum.html  keyword.extern.html  keyword.false.html  keyword.fn.html  keyword.for.html  keyword.if.html  keyword.impl.html  keyword.in.html  keyword.let.html  keyword.loop.html  keyword.match.html  keyword.mod.html  keyword.move.html  keyword.mut.html  keyword.pub.html  keyword.ref.html  keyword.return.html  keyword.self.html  keyword.static.html  keyword.struct.html  keyword.super.html  keyword.trait.html  keyword.true.html  keyword.type.html  keyword.union.html  keyword.unsafe.html  (+75 more)
front/main/: index.html  package.json  vite.config.js
(+2185 files in other folders)
